// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Main Component > matches snapshot with no offers 1`] = `
<div>
  <div
    class="page page--gray page--main"
  >
    <header
      class="header"
    >
      <div
        class="container"
      >
        <div
          class="header__wrapper"
        >
          <div
            class="header__left"
          >
            <a
              class="header__logo-link"
              href="/"
            >
              <img
                alt="6 cities logo"
                class="header__logo"
                height="41"
                src="img/logo.svg"
                width="81"
              />
            </a>
          </div>
          <nav
            class="header__nav"
          >
            <ul
              class="header__nav-list"
            >
              <li
                class="header__nav-item"
              >
                <a
                  class="header__nav-link"
                  href="/login"
                >
                  <span
                    class="header__signout"
                  >
                    Sign in
                  </span>
                </a>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </header>
    <main
      class="page__main page__main--index"
    >
      <div>
        <h1
          class="visually-hidden"
        >
          Cities
        </h1>
        <div
          class="tabs"
        >
          <section
            class="locations container"
          >
            <ul
              class="locations__list tabs__list"
            >
              <li
                class="locations__item"
              >
                <button
                  class="locations__item-link tabs__item tabs__item--active"
                  style="cursor: pointer;"
                >
                  <span>
                    Paris
                  </span>
                </button>
              </li>
              <li
                class="locations__item"
              >
                <button
                  class="locations__item-link tabs__item"
                  style="cursor: pointer; background: none;"
                >
                  <span>
                    Cologne
                  </span>
                </button>
              </li>
              <li
                class="locations__item"
              >
                <button
                  class="locations__item-link tabs__item"
                  style="cursor: pointer; background: none;"
                >
                  <span>
                    Brussels
                  </span>
                </button>
              </li>
              <li
                class="locations__item"
              >
                <button
                  class="locations__item-link tabs__item"
                  style="cursor: pointer; background: none;"
                >
                  <span>
                    Amsterdam
                  </span>
                </button>
              </li>
              <li
                class="locations__item"
              >
                <button
                  class="locations__item-link tabs__item"
                  style="cursor: pointer; background: none;"
                >
                  <span>
                    Hamburg
                  </span>
                </button>
              </li>
              <li
                class="locations__item"
              >
                <button
                  class="locations__item-link tabs__item"
                  style="cursor: pointer; background: none;"
                >
                  <span>
                    Dusseldorf
                  </span>
                </button>
              </li>
            </ul>
          </section>
        </div>
      </div>
      <div
        class="cities"
      >
        <div
          class="cities__places-container cities__places-container--empty container"
        >
          <section
            class="cities__no-places"
          >
            <div
              class="cities__status-wrapper tabs__content"
            >
              <b
                class="cities__status"
              >
                No places to stay available
              </b>
              <p
                class="cities__status-description"
              >
                We could not find any property available at the moment in Dusseldorf
              </p>
            </div>
          </section>
          <div
            class="cities__right-section"
          />
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Main Component > matches snapshot with offers 1`] = `
<div>
  <div
    class="page page--gray page--main"
  >
    <header
      class="header"
    >
      <div
        class="container"
      >
        <div
          class="header__wrapper"
        >
          <div
            class="header__left"
          >
            <a
              class="header__logo-link"
              href="/"
            >
              <img
                alt="6 cities logo"
                class="header__logo"
                height="41"
                src="img/logo.svg"
                width="81"
              />
            </a>
          </div>
          <nav
            class="header__nav"
          >
            <ul
              class="header__nav-list"
            >
              <li
                class="header__nav-item"
              >
                <a
                  class="header__nav-link"
                  href="/login"
                >
                  <span
                    class="header__signout"
                  >
                    Sign in
                  </span>
                </a>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </header>
    <main
      class="page__main page__main--index"
    >
      <div>
        <h1
          class="visually-hidden"
        >
          Cities
        </h1>
        <div
          class="tabs"
        >
          <section
            class="locations container"
          >
            <ul
              class="locations__list tabs__list"
            >
              <li
                class="locations__item"
              >
                <button
                  class="locations__item-link tabs__item tabs__item--active"
                  style="cursor: pointer;"
                >
                  <span>
                    Paris
                  </span>
                </button>
              </li>
              <li
                class="locations__item"
              >
                <button
                  class="locations__item-link tabs__item"
                  style="cursor: pointer; background: none;"
                >
                  <span>
                    Cologne
                  </span>
                </button>
              </li>
              <li
                class="locations__item"
              >
                <button
                  class="locations__item-link tabs__item"
                  style="cursor: pointer; background: none;"
                >
                  <span>
                    Brussels
                  </span>
                </button>
              </li>
              <li
                class="locations__item"
              >
                <button
                  class="locations__item-link tabs__item"
                  style="cursor: pointer; background: none;"
                >
                  <span>
                    Amsterdam
                  </span>
                </button>
              </li>
              <li
                class="locations__item"
              >
                <button
                  class="locations__item-link tabs__item"
                  style="cursor: pointer; background: none;"
                >
                  <span>
                    Hamburg
                  </span>
                </button>
              </li>
              <li
                class="locations__item"
              >
                <button
                  class="locations__item-link tabs__item"
                  style="cursor: pointer; background: none;"
                >
                  <span>
                    Dusseldorf
                  </span>
                </button>
              </li>
            </ul>
          </section>
        </div>
      </div>
      <div
        class="cities"
      >
        <div
          class="cities__places-container container"
        >
          <section
            class="cities__places places"
          >
            <b
              class="places__found"
            >
              2
               places to stay in 
              Paris
            </b>
            <form
              action="#"
              class="places__sorting"
              method="get"
            >
              <span
                class="places__sorting-caption"
              >
                Sort by
              </span>
              <span
                class="places__sorting-type"
                tabindex="0"
              >
                Popular
                <svg
                  class="places__sorting-arrow"
                  height="4"
                  width="7"
                >
                  <use
                    xlink:href="#icon-arrow-select"
                  />
                </svg>
              </span>
              <ul
                class="places__options places__options--custom "
              >
                <li
                  class="places__option places__option--active"
                  tabindex="0"
                >
                  Popular
                </li>
                <li
                  class="places__option "
                  tabindex="0"
                >
                  Price: low to high
                </li>
                <li
                  class="places__option "
                  tabindex="0"
                >
                  Price: high to low
                </li>
                <li
                  class="places__option "
                  tabindex="0"
                >
                  Top rated first
                </li>
              </ul>
            </form>
            <div
              class="cities__places-list places__list tabs__content"
            >
              <article
                class="cities__card place-card"
              >
                <div
                  class="cities__image-wrapper place-card__image-wrapper"
                >
                  <a
                    href="/offer/73583b86-c3a8-4aa5-85c1-31df45c3af76"
                  >
                    <img
                      alt="Place image"
                      class="place-card__image"
                      height="200"
                      src="http://placeimg.com/640/480"
                      width="260"
                    />
                  </a>
                </div>
                <div
                  class="place-card__info"
                >
                  <div
                    class="place-card__price-wrapper"
                  >
                    <div
                      class="place-card__price"
                    >
                      <b
                        class="place-card__price-value"
                      >
                        €
                        310
                      </b>
                      <span
                        class="place-card__price-text"
                      >
                        / night
                      </span>
                    </div>
                    <button
                      class="place-card__bookmark-button button place-card__bookmark-button--active"
                      type="button"
                    >
                      <svg
                        class="place-card__bookmark-icon"
                        height="19"
                        width="18"
                      >
                        <use
                          xlink:href="#icon-bookmark"
                        />
                      </svg>
                      <span
                        class="visually-hidden"
                      >
                        In bookmarks
                      </span>
                    </button>
                  </div>
                  <div
                    class="place-card__rating rating"
                  >
                    <div
                      class="place-card__stars rating__stars"
                    >
                      <span
                        style="width: 54%;"
                      />
                      <span
                        class="visually-hidden"
                      >
                        Rating
                      </span>
                    </div>
                  </div>
                  <h2
                    class="place-card__name"
                  >
                    <a
                      href="/offer/73583b86-c3a8-4aa5-85c1-31df45c3af76"
                    >
                      ipsa et
                    </a>
                  </h2>
                  <p
                    class="place-card__type"
                  >
                    room
                  </p>
                </div>
              </article>
              <article
                class="cities__card place-card"
              >
                <div
                  class="place-card__mark"
                >
                  <span>
                    Premium
                  </span>
                </div>
                <div
                  class="cities__image-wrapper place-card__image-wrapper"
                >
                  <a
                    href="/offer/1da075b5-5cf3-4316-abd3-243e032f400d"
                  >
                    <img
                      alt="Place image"
                      class="place-card__image"
                      height="200"
                      src="http://placeimg.com/640/480"
                      width="260"
                    />
                  </a>
                </div>
                <div
                  class="place-card__info"
                >
                  <div
                    class="place-card__price-wrapper"
                  >
                    <div
                      class="place-card__price"
                    >
                      <b
                        class="place-card__price-value"
                      >
                        €
                        167
                      </b>
                      <span
                        class="place-card__price-text"
                      >
                        / night
                      </span>
                    </div>
                    <button
                      class="place-card__bookmark-button button "
                      type="button"
                    >
                      <svg
                        class="place-card__bookmark-icon"
                        height="19"
                        width="18"
                      >
                        <use
                          xlink:href="#icon-bookmark"
                        />
                      </svg>
                      <span
                        class="visually-hidden"
                      >
                        To bookmarks
                      </span>
                    </button>
                  </div>
                  <div
                    class="place-card__rating rating"
                  >
                    <div
                      class="place-card__stars rating__stars"
                    >
                      <span
                        style="width: 74%;"
                      />
                      <span
                        class="visually-hidden"
                      >
                        Rating
                      </span>
                    </div>
                  </div>
                  <h2
                    class="place-card__name"
                  >
                    <a
                      href="/offer/1da075b5-5cf3-4316-abd3-243e032f400d"
                    >
                      dignissimos consequuntur
                    </a>
                  </h2>
                  <p
                    class="place-card__type"
                  >
                    apartment
                  </p>
                </div>
              </article>
            </div>
          </section>
          <div
            class="cities__right-section"
          >
            <section
              style="width: 100%;"
            >
              <div
                class="leaflet-container leaflet-touch leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
                style="height: 100%; width: 100%; position: relative;"
                tabindex="0"
              >
                <div
                  class="leaflet-pane leaflet-map-pane"
                  style="left: 0px; top: 0px;"
                >
                  <div
                    class="leaflet-pane leaflet-tile-pane"
                  >
                    <div
                      class="leaflet-layer "
                      style="z-index: 1;"
                    >
                      <div
                        class="leaflet-tile-container leaflet-zoom-animated"
                        style="z-index: 18; left: 0px; top: 0px;"
                      >
                        <img
                          alt=""
                          class="leaflet-tile"
                          role="presentation"
                          src="https://a.basemaps.cartocdn.com/rastertiles/voyager/14/4692/3228.png"
                          style="width: 256px; height: 256px; left: -105px; top: -21px;"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="leaflet-pane leaflet-shadow-pane"
                  />
                  <div
                    class="leaflet-pane leaflet-overlay-pane"
                  />
                  <div
                    class="leaflet-pane leaflet-marker-pane"
                  >
                    <img
                      alt=""
                      class="leaflet-marker-icon leaflet-zoom-hide leaflet-interactive"
                      src="https://assets.htmlacademy.ru/content/intensive/javascript-1/demo/interactive-map/pin.svg"
                      style="margin-left: -20px; margin-top: -40px; width: 40px; height: 40px; left: -977529px; top: 3367915px; z-index: 3367915;"
                      tabindex="0"
                    />
                    <img
                      alt=""
                      class="leaflet-marker-icon leaflet-zoom-hide leaflet-interactive"
                      src="https://assets.htmlacademy.ru/content/intensive/javascript-1/demo/interactive-map/pin.svg"
                      style="margin-left: -20px; margin-top: -40px; width: 40px; height: 40px; left: 1284667px; top: 1467803px; z-index: 1467803;"
                      tabindex="0"
                    />
                  </div>
                  <div
                    class="leaflet-pane leaflet-tooltip-pane"
                  />
                  <div
                    class="leaflet-pane leaflet-popup-pane"
                  />
                </div>
                <div
                  class="leaflet-control-container"
                >
                  <div
                    class="leaflet-top leaflet-left"
                  >
                    <div
                      class="leaflet-control-zoom leaflet-bar leaflet-control"
                    >
                      <a
                        aria-label="Zoom in"
                        class="leaflet-control-zoom-in"
                        href="#"
                        role="button"
                        title="Zoom in"
                      >
                        +
                      </a>
                      <a
                        aria-label="Zoom out"
                        class="leaflet-control-zoom-out"
                        href="#"
                        role="button"
                        title="Zoom out"
                      >
                        −
                      </a>
                    </div>
                  </div>
                  <div
                    class="leaflet-top leaflet-right"
                  />
                  <div
                    class="leaflet-bottom leaflet-left"
                  />
                  <div
                    class="leaflet-bottom leaflet-right"
                  >
                    <div
                      class="leaflet-control-attribution leaflet-control"
                    >
                      <a
                        href="https://leafletjs.com"
                        title="A JS library for interactive maps"
                      >
                        Leaflet
                      </a>
                       | © 
                      <a
                        href="https://www.openstreetmap.org/copyright"
                      >
                        OpenStreetMap
                      </a>
                       contributors © 
                      <a
                        href="https://carto.com/attributions"
                      >
                        CARTO
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;
